--- a/42-查询方法.md
+++ b/42-查询方法.md
@@ -42,3 +42,22 @@
 
    </beans>
    ```
+在本示例中使用JPA命名空间。 如果你正在使用其他抽象repository，你需要改变相应的命
+名空间来替换jpa的声明支持你得存储模块，例如mongodb.
+    另外，请注意，JavaConfig变量不会明确配置包，因为默认情况下使用注解类的包。 要定制要扫描的包，使用数据存储特定存储库的`basePackage ...`属性`@Enable ...`-annotation。
+
+4. 获取repository实例注入并使用它。
+
+   ```java
+   public class SomeClient {
+
+     @Autowired
+     private PersonRepository repository;
+
+     public void doSomething() {
+       List<Person> persons = repository.findByLastname("Matthews");
+     }
+   }
+   ```
+
+后续的章节将会详细解释这些步骤
